--- a/application/views/scripts/trajeto/index.phtml
+++ b/application/views/scripts/trajeto/index.phtml
@@ -8,16 +8,16 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 	<script>
-		 $(document).ready(function(){
-          $("div#cad_trajeto").hide();
-          $("div#aviso").hide();
-          $("button#novo_trajeto").click(function(){
-            $("div#cad_trajeto").toggle("slow");
-            $("button#fechar_aviso").click(function(){
-            $("div#aviso").hide("slow");
-        });
-        });    
-      });
+		$(document).ready(function(){
+			$("div#cad_trajeto").hide();
+			$("div#aviso").hide();
+			$("button#novo_trajeto").click(function(){
+				$("div#cad_trajeto").toggle("slow");
+				$("button#fechar_aviso").click(function(){
+					$("div#aviso").hide("slow");
+				});
+			});    
+		});
 		var i =1;
 
 
@@ -39,9 +39,9 @@
 			
 
 			
-				<button class="btn btn-outline-primary btn-lt" type="button" id="novo_trajeto" >
-				Novo Trajeto</button>
-				
+			<button class="btn btn-outline-primary btn-lt" type="button" id="novo_trajeto" >
+			Novo Trajeto</button>
+
 			
 
 
@@ -49,189 +49,267 @@
 	</div>
 	
 	<div class="container" style="background-color: rgba(0,0,0,0.8);" id="cad_trajeto">
-	<form action="TrajetoController.php" method="post">
-	<div class="form-group">
-		<div class="row" style="padding-bottom: 10px;" >
+		<form action="TrajetoController.php" method="post">
+			<div class="form-group">
+				<div class="row" style="padding-bottom: 10px;" >
 
-			<div class="col-6">
+					<div class="col-6">
 
-				<label for="descricao" id="label">Descrição</label>
-				<input type="text" class="form-control" id="descricao">
-			</div>
-			<div class="col-5">
-				<input type="hidden" id="id-onibus">
-				<label for="cod" id="label"> Alocar ônibus</label>
-				<a type="text" name="cod" class="form-control" id="cod">.</a>
+						<label for="descricao" id="label">Descrição</label>
+						<input type="text" class="form-control" id="descricao">
+					</div>
+					<div class="col-5">
+						<input type="hidden" id="id-onibus">
+						<label for="cod" id="label"> Alocar ônibus</label>
+						<input type="text" class="form-control" disabled id="descricao-onibus">
+
+
+					</div>
+					<div class="col-1" style="padding-top: 31px; padding-left: 0px;">
+						<button class=" btn btn-outline-primary" type="button" >
+							<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
+
+						</button>
+
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-5">
+						<input type="hidden" id="id-motorista">
+						<label for="descricao" id="label">Alocar Motorista</label>
+						<input type="text" class="form-control" disabled id="descricao-motorista">
+
+					</div>
+					<div class="col-1"style="padding-top: 31px; padding-left: 0px;">
+						<button class=" btn btn-outline-primary" type="button" data-toggle="modal" data-target="#exampleModalCenter-m" >
+							<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
+
+						</button>
+
+					</div>
+					<div class="col-5">
+						<input type="hidden" id="id-cobrador">
+						<label for="descricao" id="label">Alocar Cobrador</label>
+						<input type="text" class="form-control" disabled id="descricao-cobrador">
+
+					</div>
+					<div class="col-1"style="padding-top: 31px; padding-left: 0px;">
+						<button class=" btn btn-outline-primary" type="button" data-toggle="modal" data-target="#exampleModalCenter-c">
+							<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
+
+						</button>
+
+
+					</div>
+
+				</div>	
+
+
+
+
+
+
+
+
+
+				<div class="modal fade" id="exampleModalCenter-m" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLongTitle">Selecione o Motorista</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+
+
+								<select multiple class="form-control" id="sel5" style="height: 270px;">
+									<? foreach ($this->listaDosMotoristas as $motorista): ?>
+
+										<option  value="<?= $motorista['id_motorista'] ?>"><?=  $motorista['nome']; ?></option>
+									<? endforeach; ?>
+
+
+								</select>
+
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-success" id="alocar-motorista" data-dismiss="modal">Alocar</button>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Modal cobrador -->
+				<div class="modal fade" id="exampleModalCenter-c" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLongTitle">Selecione o Cobrador</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+
+
+								<select multiple class="form-control" id="sel4" style="height: 270px;">
+									<? foreach ($this->listaDosCobradores as $cobrador): ?>
+
+										<option  value="<?= $cobrador['id_cobrador'] ?>"><?=  $cobrador['nome']; ?></option>
+									<? endforeach; ?>
+
+
+								</select>
+
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-success" id="alocar-cobrador" data-dismiss="modal">Alocar</button>
+
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- FIM Modal cobrador -->
 				
-			</div>
-			<div class="col-1" style="padding-top: 31px; padding-left: 0px;">
-				<button class=" btn btn-outline-primary" type="button" >
-					<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
 
-				</button>
-				
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-5">
-				<input type="hidden" id="id-motorista">
-				<label for="descricao" id="label">Alocar Motorista</label>
-				<input type="text" class="form-control" id="descricao">
 
-			</div>
-			<div class="col-1"style="padding-top: 31px; padding-left: 0px;">
-				<button class=" btn btn-outline-primary" type="button" >
-					<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
 
-				</button>
 
-			</div>
-			<div class="col-5">
-				<input type="hidden" id="id-cobrador">
-				<label for="descricao" id="label">Alocar Cobrador</label>
-				<input type="text" class="form-control" id="descricao">
 
-			</div>
-			<div class="col-1"style="padding-top: 31px; padding-left: 0px;">
-				<button class=" btn btn-outline-primary" type="button" >
-					<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
 
-				</button>
 
+
+
+
+
+
+
+
+			</div>	
+			<div class="row" id="aviso" style="padding-right: 50px;">
+				<div class="col-3">
+
+				</div>
+				<div class="col-4" id="col-aviso" >
+
+					Selecione uma parada! 
+					<button type="button" class="close" id="fechar_aviso" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+
+
+				</div>
 
 			</div>
 
-		</div>	
-		<div class="row"></div>
-		<div class="col-6">
-			
-		</div>
-		<div class="col-6">
-			
-
-		</div>
-		</div>	
-		<div class="row" id="aviso" style="padding-right: 50px;">
-			<div class="col-3">
-				
-			</div>
-			<div class="col-4" id="col-aviso" >
-				
-				Selecione uma parada! 
-				<button type="button" class="close" id="fechar_aviso" aria-label="Close">
-	 				<span aria-hidden="true">&times;</span>
-				</button>
-
-				
-			</div>
-			
-		</div>
-
-		<div class="row" style="padding-left: 10px;" >
+			<div class="row" style="padding-left: 10px;" >
 				<div class="col-5" id="teste11" >
-				 
-				 	<label for="par1" id="label">Paradas selecionadas:</label>
-				 	<div class="row"  id="teste1" style="height: 270px; overflow: auto; border-style: solid; border-width: thin; border-radius:3%; border-color: rgba(255,255,255,0.3); ">
-				 		
-				 	</div>
+
+					<label for="par1" id="label">Paradas selecionadas:</label>
+					<div class="row"  id="teste1" style="height: 270px; overflow: auto; border-style: solid; border-width: thin; border-radius:3%; border-color: rgba(255,255,255,0.3); ">
+
+					</div>
 
 				</div>
-			<div class="col-2" style="padding-top: 60px; padding-left: 30px;  ">
-				<div class="row" style="padding-left: 45%;background-color: rgba(255,255,255,0.5); padding-top: 20px; ">
-					<div class="seta-1" id="seta1"></div>
-				</div>
-				<div class="row" style="padding-left: 45%;background-color: rgba(255,255,255,0.5); padding-top: 20px; padding-bottom: 20px;">
-					<div class="seta-2" id="seta2"></div>
-				</div>
-				
-				
-			</div>
-			<div class="col-5" >
-				 <div class="form-group">
-					<label for="sel3" id="label">Paradas:</label>
-	      <select multiple class="form-control" id="sel3" style="height: 270px;">
-	      		   <? foreach ($this->listaDasParadas as $parada): ?>
+				<div class="col-2" style="padding-top: 60px; padding-left: 30px;  ">
+					<div class="row" style="padding-left: 45%;background-color: rgba(255,255,255,0.5); padding-top: 20px; ">
+						<div class="seta-1" id="seta1"></div>
+					</div>
+					<div class="row" style="padding-left: 45%;background-color: rgba(255,255,255,0.5); padding-top: 20px; padding-bottom: 20px;">
+						<div class="seta-2" id="seta2"></div>
+					</div>
 
-						    <option  value="<?= $parada['id_parada'] ?>"><?=  $parada['local']; ?></option>
-						     <? endforeach; ?>
-						    
+
+				</div>
+				<div class="col-5" >
+					<div class="form-group">
+						<label for="sel3" id="label">Paradas:</label>
+						<select multiple class="form-control" id="sel3" style="height: 270px;">
+							<? foreach ($this->listaDasParadas as $parada): ?>
+
+								<option  value="<?= $parada['id_parada'] ?>"><?=  $parada['local']; ?></option>
+							<? endforeach; ?>
+
 
 						</select>
+					</div>
 				</div>
+
+			</div>	
+
+
+
+
+			<div class="row" style="padding: 15px;">
+
+
+
+				<button class="btn btn-outline-success btn-lg btn-block cadastrar-trajeto" type="button"   >
+					Gravar
+				</button>
+
+				<button class="btn btn-outline-danger btn-lg btn-block" type="button" id="cancelar"  >
+					Cancelar
+				</button>
+
+
 			</div>
-
-		</div>	
-
-	
-		
-
-		<div class="row" style="padding: 15px;">
-			
-		
-			
-		<button class="btn btn-outline-success btn-lg btn-block cadastrar-trajeto" type="button"   >
-				Gravar
-		</button>
-
-		<button class="btn btn-outline-danger btn-lg btn-block" type="button" id="cancelar"  >
-				Cancelar
-		</button>
-		
-	
-		</div>
-	</div>  
+		</div>  
 	</form>
-	</div>			<!-- fim container form-->
+</div>			<!-- fim container form-->
 
-	<div class="container" style="background-color: rgba(0,0,0,0.8); color: white">
-		
-		<table class="table" >
-  <thead >
-    <tr>
-      <th scope="col">Descrição</th>
-      <th scope="col">Ônibus</th>
-      <th scope="col">Motorista</th>
-      <th scope="col">Cobrador</th>
-      <th scope="col">Status</th>
-      <th scope="col">Detalhes</th>
+<div class="container" style="background-color: rgba(0,0,0,0.8); color: white">
 
-
-      
-      
-    </tr>
-  </thead>
-  <tbody>
-	
-		
-                           
-		
-    <tr>
-      
-      <td> 	</td>
-      <td> 	</td>
-      <td> 	</td>
-      <td>  </td>
-      <td>	</td>
-      
-    </tr>
-    
-      
-     
-  
-  </tbody>
-</table>
-
-	</div>
+	<table class="table" >
+		<thead >
+			<tr>
+				<th scope="col">Descrição</th>
+				<th scope="col">Ônibus</th>
+				<th scope="col">Motorista</th>
+				<th scope="col">Cobrador</th>
+				<th scope="col">Status</th>
+				<th scope="col">Detalhes</th>
 
 
 
-		<script>
-		$("button#cancelar").click(function(){
-      	      location.href = baseUrl + 'trajeto';
-        });
- 	</script>
 
-	
+			</tr>
+		</thead>
+		<tbody>
+
+
+
+
+			<tr>
+
+				<td> 	</td>
+				<td> 	</td>
+				<td> 	</td>
+				<td>  </td>
+				<td>	</td>
+
+			</tr>
+
+
+
+
+		</tbody>
+	</table>
+
+</div>
+
+
+
+<script>
+	$("button#cancelar").click(function(){
+		location.href = baseUrl + 'trajeto';
+	});
+</script>
+
+
 
 </div>
 </div>
