--- a/application/views/scripts/forma-pagamento/index.phtml
+++ b/application/views/scripts/forma-pagamento/index.phtml
@@ -1,24 +1,24 @@
 <div class="container-fluid">
-  <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css")?> />
+  
 
   <div class="row" >
     <div class="col-lg-2"></div>
     <div class="col-8">
 
-     <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.8);">
+     <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.5);">
       <li>
-        <a href="<?= $this->baseUrl('menuinicial') ?>">
+        <a href="<?= $this->baseUrl('menuinicial') ?>" style="color:white;">
           menuinicial/
         </a>
       </li>
-      <li class="active">
-        formas_pagamento
+      <li class="active" style="color:grey;">
+         Formas de pagamento
       </li>
     </ol>
 
 
 
-    <div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
+    <div class="card mb-3" style="background-color:rgba(0,0,0,0.5);">
 
       <label>Formas de Pagamento:</label>
       <table class="table">
