--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -11,12 +11,14 @@
         <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/") ?> />
         <!--Caminho da public "$this->baseUrl()-->
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap.css") ?> />
-                <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
         <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
-            <a class="navbar-brand" href="#">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
+            <a class="navbar-brand" href="<?= $this->baseUrl("") ?>">
                 PampaBus
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,30 +28,31 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="<?= $this->baseUrl("") ?>">
                             Início
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/parada-onibus") ?>">
-                            Paradas
+                        <a class="nav-link" href="<?= $this->baseUrl("/categoriapassageiro") ?>">
+                            Categ. Passageiros
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/tarifas") ?>">
-                            Tarifas
+                        <a class="nav-link" href="<?= $this->baseUrl("/categoria-onibus") ?>">
+                            Categ. de Ônibus
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
-                            Trajeto
+                        <a class="nav-link" href="<?= $this->baseUrl("/linha") ?>">
+                            Linhas
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/concessaotrajeto") ?>">
-                            Concessões
+                        <a class="nav-link" href="<?= $this->baseUrl("/forma-pagamento") ?>">
+                            Formas de Pagamento
                         </a>
                     </li>
+
                 </ul>
             </div>
         </nav>
@@ -62,6 +65,7 @@
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
         <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/categoria.js') ?>"></script>
         <?= $this->headScript(); ?>
     </body>
 </html>
