--- a/application/views/scripts/criarlinha/index.phtml
+++ b/application/views/scripts/criarlinha/index.phtml
@@ -13,7 +13,7 @@
             <div class="col">
 						<Center><H4>Linhas</H4></Center>			              
 				<!-- action="/action_page.php" Removido-->
-					<form class="form-horizontal" action="">
+					<form id="form" class="form-horizontal" name="submit" action="submit">
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="email">Nome:</label>
 							<div class="col-sm-10">
@@ -55,40 +55,59 @@
 								<input type="number" class="form-control" id="email" placeholder="Informe o número de trechos" name="email" required>
 							</div>
 						</div>	
-						<div class="form-group">        
-							<div class="col-sm-offset-2 col-sm-10">
+						<!--<div class="form-group">        
+							<div class="col-sm-offset-6 col-sm-10">
 								<button type="submit" class="btn btn-default">Enviar</button>
 							</div>
 						</div>
-					</form>
+						-->
+					
 
 						</div>
             <div class="col">
 							<Center><H4>Definir Trechos</H4>
-										              
-							<div class="col-11">
-								<div class="list-group listaDeTrajetos" id="list-tab" role="tablist">
-									<a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Trecho 1</a>
-									<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Trecho 2</a>
-									<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Trecho 3</a>
-									<a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Trecho 4</a>   
-									<a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Trecho 5</a>
-									<a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Trecho 6</a>
-									<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Trecho 7</a>
+								<div class="col-11">
+									
+										<div class="form-horizontal" >
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="email">Descrição:</label>
+												<div class="col-sm-10">
+													<input type="text" class="form-control" id="email" placeholder="Nome de identificação da linha" name="email" required>
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="email">Chegada:</label>
+												<div class="col-sm-10">
+													<input type="text" class="form-control" id="email" placeholder="Informações" name="email" required>
+												</div>
+											</div>
+											<div class="form-group">
+												<label class="control-label col-sm-2" for="email">Partida:</label>
+												<div class="col-sm-10">
+													<input type="number" class="form-control" id="email" placeholder="Informe o número de Km/h" name="email" required>
+												</div>
+											</div>
+											<div class="form-group">        
+												<div>
+													<button type="submit" class="btn btn-default" form.action="/submit">Enviar</button>
+												</div>
+											</div>
+										</div>
+									
 								</div>
+								<div class="col-sm-12 list-group listaDeTrajetos" id="list-tab" role="tablist">
+									<div>
+										<a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="" role="tab" >Trecho 1</a>
+										<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="" role="tab" >Trecho 3</a>
+									</div>
+								</div>             
 								<div class="distanciaDiv">
-									<button type="button" class="btn btn-default">Adicionar</button>
+									<button type="submit" class="btn btn-success">Criar</button>
 								</div>
-							</div>
-
-							
-							<div class="btn-group distanciaDiv">
-								<button type="button" class="btn btn-success">Criar</button>
-								<button type="button" class="btn btn-warning">Voltar</button>
-							</div>
-							</Center>
+								
+								</Center>
 						</div>
-						
+					</form>
 
 
 			</div>
