--- a/application/views/scripts/criarlinha/index.phtml
+++ b/application/views/scripts/criarlinha/index.phtml
@@ -10,9 +10,8 @@
 		<div class="col-sm-12" style="background-color:rgba(0,0,0,0.4); color: white">
 			<center><H2>Gerir Linhas</h2></center>
 			<div class="row"> 
-            <div class="col">
-						<Center><H4>Linhas</H4></Center>			              
-				<!-- action="/action_page.php" Removido-->
+        <div class="col">
+					<Center><H4>Linhas</H4></Center>
 					<form id="form" class="form-horizontal" name="submit" action="submit">
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="email">Nome:</label>
@@ -38,78 +37,65 @@
 								<label><input type="radio" name="optradio">Desativo</label>	
 						</div>
 						<div class="form-group">
-									<label class="control-label col-sm-2" for="email">Horário partida:</label>
-									<div class="col-sm-10">
-										<input type="time" class="form-control" id="email" placeholder="Horário de partida" name="email" required>
-									</div>
+							<label class="control-label col-sm-2" for="email">Horário partida:</label>
+							<div class="col-sm-10">
+								<input type="time" class="form-control" id="email" placeholder="Horário de partida" name="email" required>
+							</div>
 						</div>
 						<div class="form-group">
-									<label class="control-label col-sm-2" for="email">Horário chegada:</label>
-									<div class="col-sm-10">
-										<input type="time" class="form-control" id="email" placeholder="Horário de chegada" name="email" required>
-									</div>
+							<label class="control-label col-sm-2" for="email">Horário chegada:</label>
+							<div class="col-sm-10">
+								<input type="time" class="form-control" id="email" placeholder="Horário de chegada" name="email" required>
+							</div>
 						</div>
 						<div class="form-group">
 							<label class="control-label col-sm-2" for="email">Nmr de Trechos:</label>
 							<div class="col-sm-10">
 								<input type="number" class="form-control" id="email" placeholder="Informe o número de trechos" name="email" required>
 							</div>
-						</div>	
-						<!--<div class="form-group">        
-							<div class="col-sm-offset-6 col-sm-10">
-								<button type="submit" class="btn btn-default">Enviar</button>
-							</div>
-						</div>
-						-->
-					
-
-						</div>
+						</div>				
+				</div>
             <div class="col">
 							<Center><H4>Definir Trechos</H4>
 								<div class="col-11">
-									
-										<div class="form-horizontal" >
-											<div class="form-group">
-												<label class="control-label col-sm-2" for="email">Descrição:</label>
-												<div class="col-sm-10">
-													<input type="text" class="form-control" id="email" placeholder="Nome de identificação da linha" name="email" required>
-												</div>
-											</div>
-											<div class="form-group">
-												<label class="control-label col-sm-2" for="email">Chegada:</label>
-												<div class="col-sm-10">
-													<input type="text" class="form-control" id="email" placeholder="Informações" name="email" required>
-												</div>
-											</div>
-											<div class="form-group">
-												<label class="control-label col-sm-2" for="email">Partida:</label>
-												<div class="col-sm-10">
-													<input type="number" class="form-control" id="email" placeholder="Informe o número de Km/h" name="email" required>
-												</div>
-											</div>
-											<div class="form-group">        
-												<div>
-													<button type="submit" class="btn btn-default" form.action="/submit">Enviar</button>
-												</div>
+									<div class="form-horizontal" >
+										<div class="form-group">
+											<label class="control-label col-sm-2" for="email">Descrição:</label>
+											<div class="col-sm-10">
+												<input type="text" class="form-control" id="email" placeholder="Nome de identificação da linha" name="email" required>
 											</div>
 										</div>
-									
+										<div class="form-group">
+											<label class="control-label col-sm-2" for="email">Chegada:</label>
+											<div class="col-sm-10">
+													<input type="text" class="form-control" id="email" placeholder="Informações" name="email" required>
+											</div>
+										</div>
+										<div class="form-group">
+											<label class="control-label col-sm-2" for="email">Partida:</label>
+											<div class="col-sm-10">
+												<input type="number" class="form-control" id="email" placeholder="Informe o número de Km/h" name="email" required>
+											</div>
+										</div>
+										<div class="form-group">        
+											<div>
+												<button type="submit" class="btn btn-default" form.action="/submit">Enviar</button>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div class="col-sm-12 list-group listaDeTrajetos" id="list-tab" role="tablist">
 									<div>
-										<a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="" role="tab" >Trecho 1</a>
-										<a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="" role="tab" >Trecho 3</a>
+										<div class="list-group-item list-group-item-action" id="" data-toggle="list" >Trecho 1</div>
+										<div class="list-group-item list-group-item-action" id="" data-toggle="list" >Trecho 3</div>
 									</div>
 								</div>             
 								<div class="distanciaDiv">
 									<button type="submit" class="btn btn-success">Criar</button>
 								</div>
-								
-								</Center>
+							</Center>
 						</div>
 					</form>
-
-
 			</div>
 		</div>			
 	</div>
