att links de redirecionamento nas telas de administração

--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -18,7 +18,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
-            <a class="navbar-brand" href="<?= $this->baseUrl("") ?>">
+            <a class="navbar-brand" href="<?= $this->baseUrl("/admin-secretario") ?>">
                 PampaBus
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="<?= $this->baseUrl("") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("/admin-secretario") ?>">
                             Início
                             <span class="sr-only">(current)</span></a>
                     </li>
