--- a/application/layouts/scripts/layout_admin_local.phtml
+++ b/application/layouts/scripts/layout_admin_local.phtml
@@ -16,7 +16,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="<?= $this->baseUrl("admin-local") ?>">
                 PampaBus
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="<?= $this->baseUrl("admin-local") ?>">
                             Início
                             <span class="sr-only">(current)</span></a>
                     </li>
