layout redirects att

--- a/application/layouts/scripts/layout_admin_geral.phtml
+++ b/application/layouts/scripts/layout_admin_geral.phtml
@@ -33,22 +33,22 @@
                             <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/categoriapassageiro") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("beneficio") ?>">
                             Categ. Passageiros
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/categoria-onibus") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("categoria-onibus") ?>">
                             Categ. de Ônibus
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/linha") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("linha") ?>">
                             Linhas
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="<?= $this->baseUrl("/forma-pagamento") ?>">
+                        <a class="nav-link" href="<?= $this->baseUrl("forma-pagamento") ?>">
                             Formas de Pagamento
                         </a>
                     </li>
