estudante / deficiente e estudante sendo filtrado

--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -80,8 +80,8 @@
                                                     <button class="btn" name="atestadoMedico" id="atestadoMedico">
                                                         <i class="fa fa-download" style="color:black"></i>
                                                         <label style="color:black">
-                                                            <a style="color:black" href="<?= $solicitacaobeneficio['atestado_medico'] ?>"
-                                                               download="a">Download </a>
+                                                            <a style="color:black" href="dist/autorizaconcessao/atestadomedico.pdf"
+                                                               download="atestadomedico">Download </a>
                                                         </label>
                                                     </button>
                                                 </div>
