id_solicitacao funcionando, para pegar os dados certo de cada um no modal

--- a/application/views/scripts/beneficio/deficiente.phtml
+++ b/application/views/scripts/beneficio/deficiente.phtml
@@ -27,8 +27,8 @@
                         <td> <?= $solicitacaobeneficio['nome'] ?></td>
                         <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
                         <td> <?= $solicitacaobeneficio['descricao_situacao'] ?>
-                            <a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn" data-toggle="modal"> 
-                                <i class="fas fa-edit" style="color:white"></i>
+                            <a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn btn-default" data-toggle="modal"> 
+                                <i class="fas fa-edit" style="color:black"></i>
                             </a>
                         </td>
                     </tr>
