--- a/application/views/scripts/beneficio/estudante.phtml
+++ b/application/views/scripts/beneficio/estudante.phtml
@@ -28,9 +28,9 @@
                         <td> <?= $solicitacaobeneficio['nome'] ?></td>
                         <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
                         <td> <?= $solicitacaobeneficio['descricao_situacao'] ?>
-                            <button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+                            <a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn btn-default" data-toggle="modal"> 
                                 <i class="fas fa-edit" style="color:black"></i>
-                            </button>
+                            </a>
                         </td>
                     </tr>
                 <? endforeach; ?>
@@ -40,74 +40,75 @@
 
         </div>
         <!-- Modal -->
-        <div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">ESTUDANTES</h4>
-                        <button type="button" class="close" data-dismiss="modal">
-                            <span>&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="container-fluid"> 
-                            <div class="row">
-                                <div class="table-responsive">
-                                    <form method="post">
-                                        <div class="form-group">
-                                            <div class="col-sm-6">
-                                                <label>Nome completo:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
-                                                <label >Data de nascimento:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
-                                                <label >CPF:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
-                                                <label >RG:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
-                                                <label> Celular: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-                                                <label> Meia-Passagem </label><input type="radio" name="gender" value="male">
-                                                <label> Isenção </label><input type="radio" name="gender" value="female"> <br>
+        <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+            <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">ESTUDANTES</h4>
+                            <button type="button" class="close" data-dismiss="modal">
+                                <span>&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid"> 
+                                <div class="row">
+                                    <div class="table-responsive">
+                                        <form method="post">
+                                            <div class="form-group">
+                                                <div class="col-sm-6">
+                                                    <label>Nome completo:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
+                                                    <label >Data de nascimento:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
+                                                    <label >CPF:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
+                                                    <label >RG:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
+                                                    <label> Celular: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
+                                                    <label> Meia-Passagem </label><input type="radio" name="gender" value="male">
+                                                    <label> Isenção </label><input type="radio" name="gender" value="female"> <br>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <label> Rua: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
+                                                    <label> Nº: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
+                                                    <label> Bairro: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">							
+                                                    <label >Comprovante de Matrícula:</label>
+                                                    <br>
+                                                    <button class="btn" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
+                                                        <i class="fa fa-download" style="color:black"></i>
+                                                        <label style="color:black">
+                                                            <a style="color:black" href="dist/autorizaconcessao/comprovantematricula.pdf"
+                                                               download="a">Download </a>
+                                                        </label>
+                                                    </button>
+                                                    <br>
+                                                    <label >Comprovante de Residência:</label>
+                                                    <br>
+                                                    <button class="btn" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
+                                                        <i class="fa fa-download" style="color:black"></i>
+                                                        <label style="color:black">
+                                                            <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
+                                                               download="a">Download </a>
+                                                        </label>
+                                                    </button>
+                                                </div>
                                             </div>
-                                            <div class="col-sm-6">
-                                                <label> Rua: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
-                                                <label> Nº: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
-                                                <label> Bairro: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">							
-                                                <label >Comprovante de Matrícula:</label>
-                                                <br>
-                                                <button class="btn" name="comprovanteMatricula" value="<?= $solicitacaobeneficio['comprovante_matricula'] ?>" id="comprovanteMatricula">
-                                                    <i class="fa fa-download" style="color:black"></i>
-                                                    <label style="color:black">
-                                                        <a style="color:black" href="dist/autorizaconcessao/comprovantematricula.pdf"
-                                                           download="a">Download </a>
-                                                    </label>
-                                                </button>
-                                                <br>
-                                                <label >Comprovante de Residência:</label>
-                                                <br>
-                                                <button class="btn" name="comprovanteResidencia" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" id="comprovanteResidencia">
-                                                    <i class="fa fa-download" style="color:black"></i>
-                                                    <label style="color:black">
-                                                        <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
-                                                           download="a">Download </a>
-                                                    </label>
-                                                </button>
-                                            </div>
-                                        </div>
-                                        <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
-                                        <button type="submit" class="btn btn-danger">Não Conceder</button>							
-                                    </form>							
+                                            <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
+                                            <button type="submit" class="btn btn-danger">Não Conceder</button>							
+                                        </form>							
+                                    </div>
                                 </div>
-                            </div>
-                        </div>			 
-                    </div>
+                            </div>			 
+                        </div>
 
+                    </div>
                 </div>
             </div>
-        </div>
-
+        <? endforeach; ?>
 
 </body>
