--- a/application/views/scripts/beneficio/idoso.phtml
+++ b/application/views/scripts/beneficio/idoso.phtml
@@ -28,9 +28,9 @@
                         <td> <?= $solicitacaobeneficio['nome'] ?></td>
                         <td> <?= $solicitacaobeneficio['data_solicitacao'] ?></td>
                         <td> <?= $solicitacaobeneficio['descricao_situacao'] ?>
-                            <button class="btn" data-toggle="modal" data-target="#modal-mensagem"> 
+                            <a href="<?= '#myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" class="btn btn-default" data-toggle="modal"> 
                                 <i class="fas fa-edit" style="color:black"></i>
-                            </button>
+                            </a>
                         </td>
                     </tr>
                 <? endforeach; ?>
@@ -40,84 +40,86 @@
 
         </div>
         <!-- Modal -->
-        <div class="modal fade" id="modal-mensagem" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">PESSOA IDOSA</h4>
-                        <button type="button" class="close" data-dismiss="modal">
-                            <span>&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="container-fluid"> 
-                            <div class="row">
-                                <div class="table-responsive">
-                                    <form method="post">
-                                        <div class="form-group">
-                                            <div class="col-sm-6">
-                                                <label >Nome completo:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
-                                                <label >Data de nascimento:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
-                                                <label >CPF:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
-                                                <label >RG:</label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
-                                                <label> Celular: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-                                                <br><label>Conceder Benefício</label>
-                                                <button class="btn-group btn-group-toggle" data-toggle="buttons">
-                                                    <label class="btn btn-outline-primary">
-                                                        <input type="radio" name="options" id="option2" autocomplete="off"> Meia-Passagem
-                                                    </label>
-                                                    <label class="btn btn-outline-primary">
-                                                        <input type="radio" name="options" id="option3" autocomplete="off"> Isenção
-                                                    </label>
+        <? foreach ($this->listarBeneficios as $solicitacaobeneficio): ?>
+            <div class="modal fade" id="<?= 'myModal' . $solicitacaobeneficio['id_solicitacao'] ?>" tabindex="-1" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">PESSOA IDOSA</h4>
+                            <button type="button" class="close" data-dismiss="modal">
+                                <span>&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid"> 
+                                <div class="row">
+                                    <div class="table-responsive">
+                                        <form method="post">
+                                            <div class="form-group">
+                                                <div class="col-sm-6">
+                                                    <label >Nome completo:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['nome'] ?> " name="nomeCompleto" id="nomeCompleto">
+                                                    <label >Data de nascimento:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['data_nascimento'] ?>" name="dataNascimento" id="dataNascimento">
+                                                    <label >CPF:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['cpf'] ?>" name="cpf" id="cpf">
+                                                    <label >RG:</label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
+                                                    <label> Celular: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
+                                                    <br><label>Conceder Benefício</label>
+                                                    <button class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                        <label class="btn btn-outline-primary">
+                                                            <input type="radio" name="options" id="option2" autocomplete="off"> Meia-Passagem
+                                                        </label>
+                                                        <label class="btn btn-outline-primary">
+                                                            <input type="radio" name="options" id="option3" autocomplete="off"> Isenção
+                                                        </label>
 
-                                                </button>
-                                                <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
-                                                <button type="submit" class="btn btn-danger">Não Conceder</button>			
+                                                    </button>
+                                                    <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
+                                                    <button type="submit" class="btn btn-danger">Não Conceder</button>			
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <label> Rua: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
+                                                    <label> Nº: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
+                                                    <label> Bairro: </label>
+                                                    <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">									
+                                                    <label >Carteira do Idoso:</label>
+                                                    <br>
+                                                    <button class="btn" value="<?= $solicitacaobeneficio['carteira_idoso'] ?>" id="carteiraIdoso" name="carteiraIdoso">
+                                                        <i class="fa fa-download" style="color:black"></i>
+                                                        <label style="color:black">
+                                                            <a style="color:black" href="dist/autorizaconcessao/carteiraidoso.pdf"
+                                                               download="CarteiraIdoso">Download </a>
+                                                        </label>
+                                                    </button>
+                                                    <br>
+                                                    <label >Comprovante de Residência:</label>
+                                                    <br>
+                                                    <button class="btn" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" name="comprovanteResidencia" id="comprovanteResidencia">
+                                                        <i class="fa fa-download" style="color:black"></i>
+                                                        <label style="color:black">
+                                                            <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
+                                                               download="resid">Download </a>
+                                                        </label>
+                                                    </button>
+
+                                                </div>
                                             </div>
-                                            <div class="col-sm-6">
-                                                <label> Rua: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rua'] ?>" name="rua" id="rua">
-                                                <label> Nº: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['numero_casa'] ?>" name="numeroCasa" id="numeroCasa">									
-                                                <label> Bairro: </label>
-                                                <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['bairro'] ?>" name="bairro" id="bairro">									
-                                                <label >Carteira do Idoso:</label>
-                                                <br>
-                                                <button class="btn" value="<?= $solicitacaobeneficio['carteira_idoso'] ?>" id="carteiraIdoso" name="carteiraIdoso">
-                                                    <i class="fa fa-download" style="color:black"></i>
-                                                    <label style="color:black">
-                                                        <a style="color:black" href="dist/autorizaconcessao/carteiraidoso.pdf"
-                                                           download="CarteiraIdoso">Download </a>
-                                                    </label>
-                                                </button>
-                                                <br>
-                                                <label >Comprovante de Residência:</label>
-                                                <br>
-                                                <button class="btn" value="<?= $solicitacaobeneficio['comprovante_residencia'] ?>" name="comprovanteResidencia" id="comprovanteResidencia">
-                                                    <i class="fa fa-download" style="color:black"></i>
-                                                    <label style="color:black">
-                                                        <a style="color:black" href="dist/autorizaconcessao/comprovanteresidencia.pdf"
-                                                           download="resid">Download </a>
-                                                    </label>
-                                                </button>
 
-                                            </div>
-                                        </div>
-
-                                    </form>							
+                                        </form>							
+                                    </div>
                                 </div>
-                            </div>
-                        </div>			 
-                    </div>
+                            </div>			 
+                        </div>
 
+                    </div>
                 </div>
             </div>
-        </div>
+        <? endforeach; ?>
 
 
 </body>
