--- a/application/views/scripts/beneficio/idoso.phtml
+++ b/application/views/scripts/beneficio/idoso.phtml
@@ -67,18 +67,18 @@
                                                     <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['rg'] ?>" name="rg" id="rg">
                                                     <label> Celular: </label>
                                                     <input type="text" disabled class="form-control" value="<?= $solicitacaobeneficio['celular'] ?>" name="celular" id="celular">
-                                                    <br><label>Conceder Benefício</label>
+                                                    <label>Conceder Benefício:</label>
                                                     <button class="btn-group btn-group-toggle" data-toggle="buttons">
-                                                        <label class="btn btn-outline-primary">
-                                                            <input type="radio" name="options" id="option2" autocomplete="off"> Meia-Passagem
+                                                        <label class="btn btn-outline-dark">
+                                                            <input type="radio" name="options" id="nenhum" name="nenhum" autocomplete="off"> Nenhum
                                                         </label>
-                                                        <label class="btn btn-outline-primary">
-                                                            <input type="radio" name="options" id="option3" autocomplete="off"> Isenção
+                                                        <label class="btn btn-outline-dark">
+                                                            <input type="radio" name="options" id="meiaPassagem" name="meiaPassagem" autocomplete="off"> Meia-Passagem
                                                         </label>
-
+                                                        <label class="btn btn-outline-dark">
+                                                            <input type="radio" name="options" id="isencao" name="isencao" autocomplete="off"> Isenção
                                                     </button>
-                                                    <button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Conceder</button>
-                                                    <button type="submit" class="btn btn-danger">Não Conceder</button>			
+                                                    <br><button type="submit" name="botaoConceder" id="botaoConceder" class="btn btn-success">Salvar</button>		
                                                 </div>
                                                 <div class="col-sm-6">
                                                     <label> Rua: </label>
