--- a/application/views/scripts/parada-onibus/index.phtml
+++ b/application/views/scripts/parada-onibus/index.phtml
@@ -35,28 +35,25 @@
             </div>
             <input type="text" class="form-control" id="numeroParada" name="numeroParada" placeholder="Digite o numero da parada" required/>
           </div>
-          <div class="alert alert-danger diferente" style="display: none;" role="alert">
-            Confirme novamente o numero da parada!
-          </div>
           <br>
+          <div class="alert alert-danger numeroParada" style="display: none;" role="alert">
+            O campo numero de parada é obrigatório!
+          </div>
           <div class="input-group xmb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Local: </span>
             </div>
             <input type="text" class="form-control" id="local" name="local" placeholder="Digite o local da parada" required/>
           </div>
-          <div class="alert alert-danger diferente" style="display: none;" role="alert">
-            Confirme novamente o local!
-          </div>
           <br>
+          <div class="alert alert-danger local" style="display: none;" role="alert">
+            O campo local é obrigatório!
+          </div>
           <div class="input-group xmb-3">
             <div class="input-group-prepend">
               <span class="input-group-text" id="basic-addon1">Complemento: </span>
             </div>
             <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Digite o complemento, se houver" />
-          </div>
-          <div class="alert alert-danger diferente " style="display: none;" role="alert">
-            Confirme novamente o complemento!
           </div>
           <br>
           <div class="alert alert-success " style="display: none;" role="alert">
