--- a/application/views/scripts/forma-pagamento/editar.phtml
+++ b/application/views/scripts/forma-pagamento/editar.phtml
@@ -26,8 +26,14 @@
           <label for="">Descrição</label>
           <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" value="<?php echo $this->pagamento->getDescricao(); ?>">
         </div>
+        <div class="alert alert-danger descricao" style="display: none;" role="alert">
+          O campo descrição é obrigatório!
+        </div>
 
         <br>
+        <div class="alert alert-success" style="display: none;" role="alert">
+          Edição efetuada com sucesso!
+        </div>
         <button type="button" class="col-lg-2 btn btn-primary editarFormaPagamento">Salvar</button>
         <a href="<?= $this->baseUrl('forma-pagamento') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
       </div>
