--- a/application/views/scripts/forma-pagamento/index.phtml
+++ b/application/views/scripts/forma-pagamento/index.phtml
@@ -31,11 +31,11 @@
         <div class="form-group">
           <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a forma de pagamento" required/>
         </div>
-        <div class="alert alert-danger diferente" style="display: none;" role="alert">
-          Confirme novamente a descricao!
+        <div class="alert alert-danger descricao" style="display: none;" role="alert">
+          O campo descrição é obrigatório!
         </div>            
         <div class="alert alert-success" style="display: none;" role="alert">
-          Cadastrado com sucesso!
+     
         </div>
         <button type="button" class="col-lg-2 btn  btn-primary cadastrarFormaPagamento">Cadastrar</button>
         <a href="../public/menuinicial" class="col-lg-2  btn btn-primary">Voltar</a>   
