--- a/application/views/scripts/parada-onibus/editar.phtml
+++ b/application/views/scripts/parada-onibus/editar.phtml
@@ -1,74 +1,82 @@
 <div class="container">
   <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
   <div class="row">
-  <div class="col-lg-2"></div>
+    <div class="col-lg-2"></div>
     <div class="col-lg-8">
-       <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
-                <li>
-                  <a href="<?= $this->baseUrl('menuinicial') ?>">
-                    menuinicial/
-                    </a>
-                    <a href="<?= $this->baseUrl('categoria-onibus') ?>">
-                    categoria_onibus/
-                    </a>
-                </li>
-                <li class="active">
-                     editar
-                </li>
-            </ol>
-<form method="POST">
+     <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
+      <li>
+        <a href="<?= $this->baseUrl('menuinicial') ?>">
+          menuinicial/
+        </a>
+        <a href="<?= $this->baseUrl('parada-onibus') ?>">
+          parada_onibus/
+        </a>
+      </li>
+      <li class="active">
+       editar
+     </li>
+   </ol>
+   <form method="POST">
 
 
  <script>//Validar somente numero
-    function somenteNumeros(num) {
-        var er = /[^0-9.]/;
-        er.lastIndex = 0;
-        var campo = num;
-        if (er.test(campo.value)) {
-          campo.value = "";
-        }
-    }
- </script>
+ function somenteNumeros(num) {
+  var er = /[^0-9.]/;
+  er.lastIndex = 0;
+  var campo = num;
+  if (er.test(campo.value)) {
+    campo.value = "";
+  }
+}
+</script>
 
 
 
- <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
+<div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
   <div class="card-body">
-  <div class="input-group xmb-3">
-  <div class="input-group-prepend">
-    <input type="hidden" id="id_parada" name="id_parada" value="<?php echo $this->parada->getId_parada_onibus(); ?>">
-      <span class="input-group-text" id="basic-addon1">N°: </span>
+    <div class="input-group xmb-3">
+      <div class="input-group-prepend">
+        <input type="hidden" id="id_parada" name="id_parada" value="<?php echo $this->parada->getId_parada_onibus(); ?>">
+        <span class="input-group-text" id="basic-addon1">N°: </span>
       </div>
       <input type="text" class="form-control" onkeyup="somenteNumeros(this);" maxlength="5" id="numeroParada" name="numeroParada" placeholder="Digite o numero da parada" required value="<?php echo $this->parada->getNumeroParada(); ?>">
+    </div>
+    <br>
+    <div class="alert alert-danger numeroParada" style="display: none;" role="alert">
+      O campo numero de parada é obrigatório!
+    </div>
+    <div class="input-group xmb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Local: </span>
       </div>
-      <br>
-       <div class="input-group xmb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Local: </span>
-            </div>
-            <input type="text" class="form-control" id="local" name="local" placeholder="Digite o local da parada" required value="<?php echo $this->parada->getLocal(); ?>">
+      <input type="text" class="form-control" id="local" name="local" placeholder="Digite o local da parada" required value="<?php echo $this->parada->getLocal(); ?>">
+    </div>
+    <br>
+    <div class="alert alert-danger local" style="display: none;" role="alert">
+      O campo local é obrigatório!
+    </div>
+    <div class="input-group xmb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Complemento: </span>
       </div>
-      <br>
-       <div class="input-group xmb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Complemento: </span>
-            </div>
-            <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Digite o complemento, se houver" value="<?php echo $this->parada->getComplemento(); ?>">
-      </div>
-
-<br>
-  <button type="submit" class="col-lg-2 btn btn-primary">Salvar</button>
-  <a href="<?= $this->baseUrl('categoria-onibus') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
+      <input type="text" class="form-control" id="complemento" name="complemento" placeholder="Digite o complemento, se houver" value="<?php echo $this->parada->getComplemento(); ?>">
+    </div>
+    <br>
+    <div class="alert alert-success " style="display: none;" role="alert">
+      Cadastro de parada realizado com sucesso!
+    </div>
+    <button type="button" class="col-lg-2 btn  btn-primary editarParada">Salvar</button>
+    <a href="<?= $this->baseUrl('categoria-onibus') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
 
 
 
+  </div>
 </div>
-</div>
 
-  
+
 </form>
 
- </div>
+</div>
 <div class="col-lg-2"></div>
 </div>
 </div>
