--- a/application/views/scripts/cobrador/editar.phtml
+++ b/application/views/scripts/cobrador/editar.phtml
@@ -86,7 +86,7 @@
 					</div>
 					<div class="col-3" >
 						<label for="email" id="label">Email</label>
-  			 			<input type="text" name="email" class="form-control" id="email"  value="<?php echo $this->cobrador->getEmail(); ?>">
+  			 			<input type="text" placeholder="Digite o email" name="email" class="form-control" id="email"  value="<?php echo $this->cobrador->getEmail(); ?>">
 
 					</div>
 
