--- a/application/views/scripts/motorista/index.phtml
+++ b/application/views/scripts/motorista/index.phtml
@@ -5,7 +5,7 @@
 	<link href="../ProjetoRPV/public/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/cobrador.css") ?> />
 	
-	<title>Cadastro de motoristas</title>
+	<title>Motoristas</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 	<script>
@@ -42,7 +42,7 @@
 <body  style="background-image: url(dist/imagens/fundo.png);">
 
 	<h1 id="titulo">
-		Cadastro de motoristas
+		Motoristas
 	</h1>
 
 	<div class="container" style="background-color: rgba(0,0,0,0.8); padding-bottom: 0px;">
