--- a/application/views/scripts/trajeto/index.phtml
+++ b/application/views/scripts/trajeto/index.phtml
@@ -60,13 +60,13 @@
 					</div>
 					<div class="col-5">
 						<input type="hidden" id="id-onibus">
-						<label for="cod" id="label"> Alocar ônibus</label>
+						<label for="descricao-onibus" id="label"> Alocar ônibus</label>
 						<input type="text" class="form-control" disabled id="descricao-onibus">
 
 
 					</div>
 					<div class="col-1" style="padding-top: 31px; padding-left: 0px;">
-						<button class=" btn btn-outline-primary" type="button" >
+						<button class=" btn btn-outline-primary" type="button" data-toggle="modal" data-target="#exampleModalCenter-o">
 							<i class='fas fa-plus-circle' style="font-size: 22px;"></i>
 
 						</button>
@@ -173,10 +173,38 @@
 					</div>
 				</div>
 				<!-- FIM Modal cobrador -->
-				
+
+				<!-- INICIO Modal onibus -->
+
+				<div class="modal fade" id="exampleModalCenter-o" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLongTitle">Selecione o Ônibus</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
 
 
+								<select multiple class="form-control" id="sel6" style="height: 270px;">
+									<? foreach ($this->listaDosOnibus as $onibus): ?>
 
+										<option  value="<?= $onibus['id_onibus_urbano'] ?>"><?=  $onibus['placa']; ?></option>
+									<? endforeach; ?>
+
+
+								</select>
+
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-success" id="alocar-onibus" data-dismiss="modal">Alocar</button>
+
+							</div>
+						</div>
+					</div>
+				</div>
 
 
 
@@ -270,6 +298,7 @@
 				<th scope="col">Ônibus</th>
 				<th scope="col">Motorista</th>
 				<th scope="col">Cobrador</th>
+				<th scope="col">Número de paradas</th>
 				<th scope="col">Status</th>
 				<th scope="col">Detalhes</th>
 
@@ -282,26 +311,103 @@
 
 
 
+<? foreach ($this->listaDosTrajetos as $trajeto): ?>
 
-			<tr>
+				<tr>
 
-				<td> 	</td>
-				<td> 	</td>
-				<td> 	</td>
-				<td>  </td>
-				<td>	</td>
-
-			</tr>
-
+					<td><?= $trajeto['descricao'] ?>	</td>
+					<td>	<?= $trajeto['PLACA'] ?></td>
+					<td>	<?= $trajeto['NOME'] ?></td>
+					<td>	<?= $trajeto['nome'] ?></td>
+					<td><?= $trajeto['num_paradas'] ?>	</td>
+					<td>
 
 
+
+
+
+						<input type="hidden" value="<?php $trajeto->getSituacao(); ?>" >
+						<?php if ($trajeto->getSituacao() === 'ATIVO'): ?>
+							<div class="btn-group" id="status" data-toggle="buttons">
+								<label class="btn btn-default plug status-on btn-on aberto active" onclick="editarAtivo(<?= $trajeto->getIdTrajeto() ?>, 'ATIVO')">
+
+									<input type="radio" name="plug" checked="checked">ATIVO</label>
+									<label class="btn btn-default plug status-off btn-off fechado" onclick="editarAtivo(<?= $trajeto->getIdTrajeto() ?>, 'INATIVO')">
+										<input type="radio" name="plug">INATIVO</label>
+									</div>
+								<?php endif; ?>
+
+								<?php if ($trajeto->getSituacao() === 'INATIVO'): ?>
+									<div class="btn-group" id="status" data-toggle="buttons">
+										<label class="btn btn-default status-on btn-on plug aberto" onclick="editarAtivo(<?= $trajeto->getIdTrajeto()?>, 'ATIVO')">
+											<input type="radio" name="plug" checked="checked">ATIVO</label>
+											<label class="btn btn-default status-off btn-off plug fechado active" onclick="editarAtivo(<?= $trajeto->getIdTrajeto()?>, 'INATIVO')">
+												<input type="radio" name="plug">INATIVO</label>
+											</div>
+										<?php endif; ?>
+
+
+
+
+
+						</td>
+					<td>	
+						
+					<button class="btn btn-info btn-labeled" data-toggle="modal"  data-target="<?= '#myModal' . $trajeto['id_trajeto'] ?>" >
+										<span class="btn-label">
+											<i class="fas fa-eye"></i>
+										</span>
+										Visualizar dados
+									</button>	
+
+
+					</td>
+
+							</tr>
+						<? endforeach; ?>
 
 		</tbody>
 	</table>
 
 </div>
 
+				
+			<!-- FIM Modal onibus -->
+			<!-- INICIO Modal TRAJETO -->
+			<? foreach ($this->listarParadasDosTrajetos as $trajeto): ?>
 
+			<div class="modal fade" id="<?= 'myModal' . $trajeto['id_trajeto'] ?>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" role="document">
+						<div class="modal-content">
+							<div class="modal-header">
+								<h5 class="modal-title" id="exampleModalLongTitle">Paradas</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="modal-body">
+
+
+								<select multiple class="form-control" id="sel4" style="height: 270px;">
+									
+
+										<option ><?=  $trajeto['complemento']; ?></option>
+									
+
+
+								</select>
+
+							</div>
+							<div class="modal-footer">
+								<button type="button" class="btn btn-success" id="alocar-cobrador" data-dismiss="modal">Alocar</button>
+
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<? endforeach; ?>
+				<!-- FIM Modal TRAJETO -->
 
 <script>
 	$("button#cancelar").click(function(){
